[package]
name = "clipboard-sync-alt"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.47.1", features = ["full"] }

# 剪贴板操作
arboard = "3.6.1"

# 数据序列化
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# 错误处理
anyhow = "1.0.99"

# 命令行参数
clap = { version = "4.5.47", features = ["derive"] }

# 系统通知
notify-rust = "4.11.7"

# 图片处理
image = "0.24"

# 其他依赖
base64 = "0.22.1"